--- a/package.json
+++ b/package.json
@@ -12,8 +12,21 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.16.1",
+    "@mui/lab": "^5.0.0-alpha.172",
+    "@mui/material": "^5.16.1",
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
+    "dotenv-webpack": "^8.1.0",
+    "postcss": "^8.4.39",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "react-helmet": "^6.1.0",
+    "react-swipeable-views": "^0.14.0",
+    "tailwind": "^4.0.0",
+    "unstated-next": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
